Fixing total gold value keeps it current value

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "Token": "MTA0MTU3NzAzMDY0NDQwODMzMQ.GODOo2.6fbc1Otn_fgmOhS3r-pC1w9LK3Z_8y40xFuk-I",
+    "Token": "MTA0MTU3NzAzMDY0NDQwODMzMQ.GaHwX6.2N_DBPVPMBISRnU9T7HFQ5BYjPEaA0zknQc3QA",
     "prefix": "suis!"
 }
